# FiTx

./: .env  Dockerfile  README.md  docker-compose.yml
data/: examined_patch_list.csv
patches/: Makefile.build
scripts/: analyze.py  config  count_time.py  count_warning.py  requirements.txt
scripts/FiTx/: constants.py  utils.py
src/: CMakeLists.txt
src/detector/: CMakeLists.txt
src/detector/all_detector/: All_Detector.cpp  CMakeLists.txt
src/detector/all_detector/include/: All_Detector.hpp
src/detector/df_detector/: CMakeLists.txt  DFUtils.cpp  DF_Detector.cpp
src/detector/double_lock_detector/: CMakeLists.txt  DLUtils.cpp  DL_Detector.cpp
src/detector/double_unlock_detector/: CMakeLists.txt  DULUtils.cpp  DUL_Detector.cpp
src/detector/include/: DF_Detector.hpp  DL_Detector.hpp  DUL_Detector.hpp  Leak_Detector.hpp  RefDetector.hpp  UAF_Detector.hpp  UnrefDetector.hpp  alloc.hpp  lock.hpp  refcount.hpp
src/detector/leak_detector/: CMakeLists.txt  LeakUtils.cpp  Leak_Detector.cpp
src/detector/nullptr_detector/: CMakeLists.txt  NULL_Detector.cpp
src/detector/ref_count_detector/: CMakeLists.txt  RefUtils.cpp  Ref_Detector.cpp
src/detector/ref_uncount_detector/: CMakeLists.txt  UnrefUtils.cpp  Unref_Detector.cpp
src/detector/two_detector/: CMakeLists.txt  Two_Detector.cpp
src/detector/uaf_detector/: CMakeLists.txt  UAFUtils.cpp  UAF_Detector.cpp
src/detector/ubi_detector/: CMakeLists.txt  UBI_Detector.cpp
src/detector/ubi_detector/include/: UBI_Detector.hpp
src/framework/: CMakeLists.txt
src/framework/core/: AnalysisHelper.cpp  BasicBlock.cpp  CMakeLists.txt  Function.cpp  Instruction.cpp  Logs.cpp  Utils.cpp  Value.cpp  ValueTypeAlias.cpp
src/framework/core/Instructions/: BranchInstruction.cpp  CMakeLists.txt  CallInstruction.cpp  LoadInstruction.cpp  StoreInstruction.cpp
src/framework/core/SFG/: CMakeLists.txt  Converter.cpp
src/framework/framework_ir/: Analyzer.cpp  CMakeLists.txt  IRGenerator.cpp  Utils.cpp
src/framework/frontend/: Analyzer.cpp  BasicBlock.cpp  CMakeLists.txt  Framework.cpp  Function.cpp  State.cpp  StateTransition.cpp
src/framework/include/core/: AnalysisHelper.hpp  BasicBlock.hpp  Casting.hpp  Function.hpp  Instruction.hpp  Instructions.hpp  Logs.hpp  Utils.hpp  Value.hpp  ValueTypeAlias.hpp
src/framework/include/core/Instructions/: BranchInstruction.hpp  CallInstruction.hpp  LoadInstruction.hpp  StoreInstruction.hpp
src/framework/include/core/SFG/: Converter.hpp
src/framework/include/framework_ir/: Analyzer.hpp  IRGenerator.hpp  Utils.hpp
src/framework/include/frontend/: Analyzer.hpp  BasicBlock.hpp  CommandlineArgs.hpp  Framework.hpp  Function.hpp  PropagationConstraint.hpp  State.hpp  StateTransition.hpp  Utils.hpp
tests/double_free/src/: inter_error_code.c  inter_nulled.c  inter_procedural_df.c  intra_alloced_df.c  intra_array_df.c  intra_no_df.c  intra_nulled_df.c  intra_procedural_df.c  intra_simple_df.c  intra_struct_no_df.c
tests/double_lock/src/: inter_branch_no_dl.c  intra_simple_dl.c
tests/memory_leak/src/: intra_leak_check.c  intra_simple_leak.c  intra_tri_store_leak.c  intra_with_path.c
tests/uaf/src/: inter_reference_uaf.c  intra_simple_no_uaf.c  intra_simple_uaf.c
